# rules_js

./: .bazelignore  MODULE.bazel  WORKSPACE  pnpm-lock.yaml  pnpm-workspace.yaml
.aspect/rules/external_repository_action_cache/: npm_translate_lock_LTE4Nzc1MDcwNjU=
.github/workflows/: ci.yaml
e2e/bzlmod/: BUILD.bazel  MODULE.bazel  README.md  pnpm-lock.json
e2e/link_js_package/: pnpm-lock.yaml
js/: extensions.bzl
js/private/: translate_pnpm_lock.bzl
