load("@aspect_rules_js//js:defs.bzl", "js_binary")

#load("@npm//:node_modules.bzl", "node_modules")
load("@npm__chalk__5.0.1__links//:link_js_package.bzl", link_chalk = "link_js_package")

link_chalk()

#node_modules()

js_binary(
    name = "bin",
    data = [
        #"@npm//chalk",
    ],
    entry_point = "main.js",
)
