module(
    name = "e2e_bzlmod",
    version = "0.0.0",
    compatibility_level = 1,
)

bazel_dep(name = "aspect_rules_js", version = "0.0.0")

local_path_override(
    module_name = "aspect_rules_js",
    path = "../..",
)
npm = use_extension("@aspect_rules_js//js:extensions.bzl", "npm", dev_dependency = True)
npm.pnpm_lock(
    name = "npm",
    # TODO: accept the yaml lockfile instead so we don't have to check in both
    pnpm_lock = "//:pnpm-lock.json",
)

use_repo(npm, "npm")
